[package]
name = "hashed-email-cracker"
version = "0.1.0"
description = "Brute-force to find email hashed with sha256"
keywords = ["cracker", "brute-force", "email", "hash", "sha256"]
categories = ["command-line-utilities"]
authors = ["Jesús Hernández <jesushdez@protonmail.com>"]
edition = "2018"
license = "Unlicense"
repository = "https://github.com/jhg/hashed-email-cracker"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "^0.9"
hex = "^0.4"
rayon = "^1.3"
structopt = "^0.3"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[features]
default = ["loop"]
loop = []
recursion = []
